--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://jaxdsout.github.io/portfolio/",
   "private": true,
   "dependencies": {
+    "@floating-ui/react": "^0.26.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,8 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
