--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@tailwindcss/postcss": "^4.0.3",
+    "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
